[gd_scene load_steps=4 format=3 uid="uid://denfcm6iuryyo"]

[ext_resource type="Script" path="res://src/ui/setting_panel.gd" id="1_ikbau"]
[ext_resource type="PackedScene" uid="uid://d4n4fgyjgicp8" path="res://src/ui/fast_tag_save.tscn" id="2_wsv8f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_byh80"]
bg_color = Color(0.113725, 0.168627, 0.231373, 1)

[node name="Setting" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_byh80")
script = ExtResource("1_ikbau")

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a Directory"
size = Vector2i(800, 600)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer2" type="ScrollContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/separation = 24

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer2/VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer2/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
text = "Language: "

[node name="LanguageOption" type="OptionButton" parent="MarginContainer/HBoxContainer2/VBoxContainer/MarginContainer2/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/HBoxContainer2/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
text = "Default Panel: "

[node name="DefaultPanelOption" type="OptionButton" parent="MarginContainer/HBoxContainer2/VBoxContainer/MarginContainer2/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer2/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer2/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Screen Shoot Directory: "

[node name="ScreenShootLineEdit" type="LineEdit" parent="MarginContainer/HBoxContainer2/VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer2/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Choose Directory"

[node name="FastTagSave" parent="MarginContainer/HBoxContainer2/VBoxContainer" instance=ExtResource("2_wsv8f")]
layout_mode = 2

[node name="FastTagSave2" parent="MarginContainer/HBoxContainer2/VBoxContainer" instance=ExtResource("2_wsv8f")]
layout_mode = 2
tag_type = 1

[node name="FastTagSave3" parent="MarginContainer/HBoxContainer2/VBoxContainer" instance=ExtResource("2_wsv8f")]
layout_mode = 2
tag_type = 2

[node name="FastTagSave4" parent="MarginContainer/HBoxContainer2/VBoxContainer" instance=ExtResource("2_wsv8f")]
layout_mode = 2
tag_type = 3

[connection signal="dir_selected" from="FileDialog" to="." method="_on_file_dialog_dir_selected"]
[connection signal="item_selected" from="MarginContainer/HBoxContainer2/VBoxContainer/MarginContainer2/HBoxContainer/LanguageOption" to="." method="_on_language_option_item_selected"]
[connection signal="item_selected" from="MarginContainer/HBoxContainer2/VBoxContainer/MarginContainer2/HBoxContainer/DefaultPanelOption" to="." method="_on_default_panel_option_item_selected"]
[connection signal="text_submitted" from="MarginContainer/HBoxContainer2/VBoxContainer/MarginContainer/HBoxContainer/ScreenShootLineEdit" to="." method="_on_screen_shoot_line_edit_text_submitted"]
[connection signal="pressed" from="MarginContainer/HBoxContainer2/VBoxContainer/MarginContainer/HBoxContainer/Button" to="." method="_on_screen_shot_directory_pressed"]
